// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroSection > renders default as expected 1`] = `
<div>
  <div
    class="hero-section bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="hero-section__content max-w-[920px] py-12"
    />
  </div>
</div>
`;

exports[`HeroSection > renders with buttons 1`] = `
<div>
  <div
    class="hero-section bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="hero-section__content max-w-[920px] py-12"
    >
      <h1
        class="hero-section__title text-color-text-on-dark text-center bluedot-h1"
      >
        This is the title
      </h1>
      <h2
        class="hero-section__subtitle text-color-text-on-dark text-2xl font-[400] text-center mt-4 bluedot-h2"
      >
        This is the subtitle
      </h2>
      <div
        class="flex justify-center mt-8"
      >
        <a
          class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose text-sm px-4 py-3 gap-2 rounded-sm font-[650] cta-button--primary bg-bluedot-normal link-on-dark"
          href="https://example.com"
          tabindex="0"
        >
          Do a thing
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroSection > renders with optional yield 1`] = `
<div>
  <div
    class="hero-section bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="hero-section__content max-w-[920px] py-12"
    >
      <p>
        This is the yield
      </p>
    </div>
  </div>
</div>
`;

exports[`HeroSection > renders with titles 1`] = `
<div>
  <div
    class="hero-section bg-bluedot-darker flex flex-row justify-center items-center w-full px-spacing-x"
  >
    <div
      class="hero-section__content max-w-[920px] py-12"
    >
      <h1
        class="hero-section__title text-color-text-on-dark text-center bluedot-h1"
      >
        This is the title
      </h1>
      <h2
        class="hero-section__subtitle text-color-text-on-dark text-2xl font-[400] text-center mt-4 bluedot-h2"
      >
        This is the subtitle
      </h2>
    </div>
  </div>
</div>
`;
